iOS build works; try android again with /Users/cwaldren/Library/Android/sdk set

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,9 +65,9 @@ jobs:
           command: ./.circleci/macos-install-android-sdk.sh 28  # demo app currently uses Android 9.0 = API 28
 
       # Note that the dotnet CLI command can't be used with Xamarin projects; we must use msbuild
-      #- run:
-      #    name: Build XamarinAndroidApp
-      #    command: msbuild /restore /p:Configuration=Debug /p:AndroidSdkDirectory=$ANDROID_HOME XamarinAndroidApp/XamarinAndroidApp.csproj
+      - run:
+          name: Build XamarinAndroidApp
+          command: msbuild /restore /p:Configuration=Debug /p:AndroidSdkDirectory=$ANDROID_SDK_ROOT XamarinAndroidApp/XamarinAndroidApp.csproj
 
       - run:
           name: Pre-build storyboard for iOS app
