--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,12 @@ jobs:
           name: Install Android SDK
           command: ./.circleci/macos-install-android-sdk.sh 28  # demo app currently uses Android 9.0 = API 28
 
+      - run:
+          name: Sanity check
+          command: |
+              ls /usr/local/share/android-sdk
+              echo "Android SDK Root is: $ANDROID_SDK_ROOT"
+
       # Note that the dotnet CLI command can't be used with Xamarin projects; we must use msbuild
       - run:
           name: Build XamarinAndroidApp
